2011-11-03  Per Bothner  <per@bothner.com>

	* LambdaExp.java (enterFunction): Adjust parameter count for "$this$".

2011-10-29  Jamison Hope  <jrh@theptrgroup.com>

	* InlineCalls.java (visitQuoteExp): Allow converting integer
	literals to boxed number types like java.lang.Integer and BigInteger.
	Also allow converting integer and float to float/double/Float/Double.

2011-10-25  Per Bothner  <per@bothner.com>

	* LambdaExp.java (enterFunction): If default parameter has primitive
	type, convert default to boxed type when calling searchForKeyword.
	* QuoteExp.java (compile): If value has primitive type, but target is
	corresponding boxed type, compile value as is.  This is an optimization
	primarily for the sake of the enterFunction change above.
	* InlineCalls.java (visitDefaultArgs): New method, so we can pass
	required type when visiting default expression.

2011-10-24  Per Bothner  <per@bothner.com>

	For default expressions of optional parameters, use
	Declaration#initValue instead of LambdaExp#defaultArgs.
	* LambdaExp.java (defaultArgs): Removed field.
	(opt_args): New field.
	(enterFunction, mustCompile, evalDefaultArg, print, apply):
	Update appropriately.
	* ApplyExp.java (compile): Likewise.
	* FindTailCalls.java (visitLambdaExp): Likewise.
	* ExpVisitor.java (visitDefaultArgs): Likewise.
	* FindCapturedVars.java (visitDefaultArgs): Likewise.

2011-10-08  Charles Turner  <chturne@gmail.com>

	* ApplicationMainSupport.java (propertyFields): Added the
	out:print-circle option.

2011-10-07  Per Bothner  <per@bothner.com>

	* QuoteExp.java (calculateType): If value is a Class, return a
	ParameterizedType, as in Java.

2011-10-01  Jamison Hope  <jrh@theptrgroup.com>

	Add support for native methods.
	* Special.java (nativeSpecial): New constant.
	* QuoteExp.java (nativeExp): New constant.
	* LambdaExp.java (isNative): New method.
	(addMethodFor): Set NATIVE flag on method if isNative().
	(compileAsMethod): Do nothing if isNative().