@@ -482,6 +482,7 @@ public class InlineCalls extends ExpExpVisitor<Type>
 
   protected Expression visitLambdaExp (LambdaExp exp, Type required)
   {
+    exp.setCallConvention(getCompilation());
     Declaration firstDecl = exp.firstDecl();
     if (firstDecl != null && firstDecl.isThisParameter()
         && ! exp.isClassMethod() && firstDecl.type == null)
